[Fix] footer issues, filters position, places at the 7 index

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -7,7 +7,7 @@ footer {
     text-align: center;
     justify-content: center;
     flex-direction: column;
-    position: absolute;
+    position: relative;
     bottom: 0;
 
 }
