--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,5 +1,5 @@
-.Juanito {
-    display: flex;
+.places {
+    text-align: center;
 }
 .places h1 {
     font-size: 30px;
@@ -14,6 +14,7 @@
     margin: 20px;
     border: #FF5A5F solid 1px;
     border-radius: 4px;
+    display: inline-block;
 }
 
 .places h2 {
