[Feature][Fix] add all web static, fix some styles, add icons

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -7,7 +7,6 @@ footer {
     text-align: center;
     justify-content: center;
     flex-direction: column;
-    position: relative;
+    position: fixed;
     bottom: 0;
-
 }
