--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -7,6 +7,6 @@ footer {
     text-align: center;
     justify-content: center;
     flex-direction: column;
-    position: fixed;
+    position: absolute;
     bottom: 0;
 }
