--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,11 +1,13 @@
 .places {
     text-align: center;
+    margin: 0;
 }
 .places h1 {
     font-size: 30px;
     vertical-align: top;
     text-align: left;
-    padding: 10px 15px;
+    padding: 25px 0 0 30px;
+    margin: 0;
 }
 
 .places article {
@@ -15,6 +17,8 @@
     border: #FF5A5F solid 1px;
     border-radius: 4px;
     display: inline-block;
+    position: relative;
+
 }
 
 .places h2 {
